tests/NormalTests/paczka1/small_fuzzy/84969981.err
Error in line 15: i4vuWhO6Sfq S301 37,04
